--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
-    "socket.io": "^4.1.2"
+    "mongoose": "^5.12.15",
+    "socket.io": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
