--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.15",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.1.2",
+    "tsyringe": "^4.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
